<resources>
    <string name="app_name">Compete Network</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Filter</string>
    <string name="sal">Salary</string>
    <string name="filt">Filter</string>
    <string name="free">Free</string>
    <string name="category">Category</string>
    <string name="content">Content Developer</string>
    <string name="marketing">Marketing</string>
    <string name="prog">Programming</string>
    <string name="pic">Photography</string>
    <string name="other">Others</string>
    <string name="company">Company</string>
    <string name="infosys">Infosys</string>
    <string name="ms">Microsoft</string>
    <string name="byju">Byjus</string>
    <string name="amazon">Amazon</string>
    <string name="ola">Ola</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="hackathon">Hackathon</string>
    <string name="internship">Internship</string>
    <string name="quiz">Quiz</string>
    <string name="job">Jobs</string>
    <string name="competition">Competition</string>
    <string name="scholarship">Scholarship</string>
    <string name="conference">Conference</string>
    <string name="workshop">Workshop</string>
    <string name="festival">Festival</string>
    <string name="admin">Login as Admin</string>
    <string name="type">Event Type</string>
    <string name="name">Event Type</string>
</resources>