<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.slideshow.SlideshowFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Filter Events"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Prize Money"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/k10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10,000"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/k5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5,000"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/k2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2,000"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Participation Certificate"
                    android:textSize="17sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/greendark" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marketing"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/prog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prog"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pic"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/greendark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/infosys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/infosys" />

            <CheckBox
                android:id="@+id/ms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ms"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/byju"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/byju"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/amazon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazon"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/ola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Others"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Filter"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>